fixing bubble logo not centered on mobile

--- a/sandbox/bubble_meteor/client/stylesheets/style.styl
+++ b/sandbox/bubble_meteor/client/stylesheets/style.styl
@@ -1775,7 +1775,7 @@ navbar-height        =  60px
         left                       15px
       @media (max-width: 767px)
         position                   absolute
-        margin-right               -16px
+        margin-left                -16px
         left                       50%
       &.cb-logo-main-mobile
         @media (min-width: 768px)
